--- a/css/styles.css
+++ b/css/styles.css
@@ -3,28 +3,32 @@
 
 body {
     margin: 0;
-    background-color: #ffffff;
+    background-color: ghostwhite;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
+/*  #id */
+
+/*  .class  */
+
 .main_div {
-    margin-bottom: 15px;
     margin-left: 100px;
     margin-right: 100px;
-    background-color: rgba(255, 255, 255);
+}
+
+.timeline_div {
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 
-#logo {
-    margin: 0px;
+h1#logo {
     font-family: IBM Plex Mono;
-    color: #ffffff;
-    background-color: #171515;
+    color: white;
     font-weight: normal;
-    margin-bottom: 0px;
-
+    margin: 0;
 }
 
 #div2 {
@@ -35,9 +39,8 @@ body {
 
 #div3 {
     align-self: center;
-    background-color: rgba(255, 255, 255);
     text-decoration: none;
-    color: #171515;
+    color: black;
     padding: 1%;
     display: flex;
     justify-content: center;
@@ -58,30 +61,38 @@ body {
     align-items: center;
 }
 
-.nav_menu,
-#logo_menu {
-    display: inline-flexbox;
-    /* flex-direction: row; */
+.nav_menu {
     text-align: center;
     line-height: 50px;
     background-color: #171515;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.logo_menu {
+    text-align: center;
+    line-height: 50px;
+    background-color: #171515;
+    margin: 0;
 }
 
 .header_menu {
-    color: rgba(255, 255, 255);
+    color: white;
     font-family: Quicksand;
     font-size: x-large;
+    font-weight: no;
     text-decoration: none;
-    margin: 20px;
+    margin: 0px;
+    margin-left: 2%;
+    margin-right: 2%;
     background-color: #171515;
     text-align: center;
 }
 
 .header_menu:hover {
-    color: rgba(0, 255, 242);
-    transform: scale(1.5);
-    transition-property: transform;
-    transition-duration: 0.3s;
+    color: aqua;
 }
 
 .anchor_footer {
@@ -110,6 +121,13 @@ body {
     margin-bottom: 5px;
 }
 
+.h2_timeline {
+    font-family: IBM Plex Mono;
+    text-align: center;
+    font-size: 30px;
+    margin: 0;
+}
+
 .h3_base {
     font-family: IBM Plex Mono;
     font-size: 30px;
@@ -118,7 +136,6 @@ body {
 }
 
 .technologies {
-    background-color: rgba(255, 255, 255);
     font-family: IBM Plex Mono;
     display: block;
     color: #171515;
@@ -134,4 +151,143 @@ body {
 .hr_footer {
     margin-left: 3%;
     margin-right: 3%;
+    margin-top: 0;
+}
+
+
+
+
+
+
+/*Timeline*/
+* {
+    box-sizing: border-box;
+}
+
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: rgb(0, 255, 242);
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+/* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: ghostwhite;
+    border: 5px solid rgb(0, 0, 0);
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+
+    /* Place the timelime to the left */
+    .timeline::after {
+        left: 31px;
+    }
+
+    /* Full-width containers */
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    /* Make sure that all arrows are pointing leftwards */
+    .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    /* Make sure all circles are at the same spot */
+    .left::after,
+    .right::after {
+        left: 15px;
+    }
+
+    /* Make all right containers behave like the left ones */
+    .right {
+        left: 0%;
+    }
 }
